Fix a bug in checkpoint where we committed the transaction too early.

It's not safe to commit the transaction before the files have been
synced to disk - if we do that the checkpoint can be rolled forward
in recovery before the checkpoint in the file has been updated.

Refs SERVER-18316